; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/tools/perf/util/extr_session.c_perf_session__fprintf_dsos.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/tools/perf/util/extr_session.c_perf_session__fprintf_dsos.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.perf_session = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @perf_session__fprintf_dsos(%struct.perf_session* %0, i32* %1) #0 {
  %3 = alloca %struct.perf_session*, align 8
  %4 = alloca i32*, align 8
  store %struct.perf_session* %0, %struct.perf_session** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load %struct.perf_session*, %struct.perf_session** %3, align 8
  %6 = getelementptr inbounds %struct.perf_session, %struct.perf_session* %5, i32 0, i32 1
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 1
  %8 = load i32*, i32** %4, align 8
  %9 = call i64 @__dsos__fprintf(i32* %7, i32* %8)
  %10 = load %struct.perf_session*, %struct.perf_session** %3, align 8
  %11 = getelementptr inbounds %struct.perf_session, %struct.perf_session* %10, i32 0, i32 1
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i32*, i32** %4, align 8
  %14 = call i64 @__dsos__fprintf(i32* %12, i32* %13)
  %15 = add i64 %9, %14
  %16 = load %struct.perf_session*, %struct.perf_session** %3, align 8
  %17 = getelementptr inbounds %struct.perf_session, %struct.perf_session* %16, i32 0, i32 0
  %18 = load i32*, i32** %4, align 8
  %19 = call i64 @machines__fprintf_dsos(i32* %17, i32* %18)
  %20 = add i64 %15, %19
  ret i64 %20
}

declare dso_local i64 @__dsos__fprintf(i32*, i32*) #1

declare dso_local i64 @machines__fprintf_dsos(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
